# 13MBID-OCT2526

./: .gitignore  Makefile  README.md  crear_archivo_requerimientos.bat  dvc.yaml  pyproject.toml
.dvc/: config
app/: api.py  ui.py
config/: requirements.txt  uv_requirements.txt
data/processed/: .gitignore
docs/: .gitignore
docs/figures/: .gitignore
examples/: ejemplo-reporte.ipynb  probar-entorno.ipynb
models/: .gitignore  prod_model.pkl  prod_preprocessor.pkl
notebooks/: CD01_Visualizacion.ipynb  CD02_Procesamiento.ipynb  DL01_Auxiliar.ipynb  MD01_Experimentacion.ipynb  resultados_modelos.csv
src/: data_prep.py  data_visualization.py  train_model.py
test/: conftest.py  test_data_quality.py  test_data_quality_ge.py  test_train.py
